<resources>
    <string name="app_name">Stuednt Management Application</string>
    <string name="todo_splash_screen">TODO</string>
    <string name="welcome_to_ats_student_management_system">Welcome to ATS Student Management System</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="login_with_your_registered_Username">Login with your registered Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">login</string>
    <string name="for_new_registration">For new registration</string>
    <string name="click_here">Click here</string>
</resources>