<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:background="@drawable/header_login_screen"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_border_01"
            android:fontFamily="sans-serif-condensed"
            android:padding="15dp"
            android:text="@string/welcome_to_ats_student_management_system"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/to_continue"
            android:textColor="@color/red"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:text="@string/login_with_your_registered_Username"
            android:background="@drawable/rectangular_hollow_border_01"
            android:textColor="#F4DC00"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_field_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxBackgroundColor="#6DBB86FC">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="20dp"
                android:textColor="@color/purple_200"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_field_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxBackgroundColor="#6DBB86FC"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/purple_200"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/forget_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forget_password"
            android:textColor="@color/purple_200"
            android:textSize="11sp"
            app:backgroundTint="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="3dp"
            android:background="@drawable/rectangle_border_03"
            android:text="@string/login"
            android:textColor="@color/black"
            app:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/convergence"
            android:padding="5dp"
            android:text="@string/for_new_registration"
            android:textColor="@color/purple_200"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/goto_registration_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_border_03"
            android:text="@string/click_here"
            android:textColor="@color/black"
            app:backgroundTint="@color/purple_200"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck"/>

    </LinearLayout>

</LinearLayout>